
Revision 5.0.0, released 2018-10-??
-----------------------------------

- SNMPv3 crypto operations that require external dependencies
  made dependent on the optional external
  package -- pysnmpcrypto.
- By switching to pysnmpcrypto, pysnmp effectively migrates from
  PyCryptodomex to pyca/cryptography whenever available on the
  platform.
- Many really old backward-compatibility code snippets removed.
  Most importantly:
  
  * `pysnmp.entity.rfc3413.oneliner` and everything related
    to the (non-standard) UNIX domain socket transport is gone
  * `pysnmp.carrier.asynsock` backward-compatible wrapper over
    `pysnmp.carrier.asyncore` is gone

- The MIB instrumentation API overhauled in backward incompatible
  way:

      - MIB instrumentation methods signatures simplified to accept
        just var-binds (as var-arg), the rest of the parameters packed
        into opaque kwargs
      - CommandResponder application passes `snmpEngine` and optionally
        user-supplied `cbCtx` object throughout the MIB instrumentation
        methods. The goal is to let MIB objects access/modify whatever
        custom Python objects they need while being called back.
- The high-level API (`hlapi`) extended to cover lightweight SNMP v1arch
  in hope to ease the use of packet-level SNMP API.

  By way of introducing v1arch hlapi, the sub-packages layout changed
  so that `pysnmp.hlapi` is moved to `pysnmp.hlapi.v3arch` and the new
  v1arch layer is introduced in `pysnmp.hlapi.v1arch`. This change does
  not break backward compatibility as `pysnmp.hlapi` still defaults to
  `pysnmp.hlapi.v3arch`.

  The `pysnmp.hlapi.v1arch` is designed to be as much similar in use
  to `pysnmp.hlapi.v3arch`, but with high-performance in mind. One of
  the consequences of this higher performance focus is that various
  automation around building well-formed SNMP messages is and mediating
  differences between SNMP versions is not present in this new `v1arch`
  layer.